--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale: 'zh-CN'
-title: 'EDLAB'
+title: 'VISUAL'
 title_separator: '-'
-name: &name 'EDLAB'
-description: &description 'Embedded Deep Learning and Visual Analysis Lab'
-url: 'https://eetchen.github.io' # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name: &name 'Visual'
+description: &description 'Visual'
+url: 'https://aqsc.github.io' # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url: 'http://127.0.0.1:4000'
 baseurl: '' # the subpath of your site, e.g. "/blog"
-repository: 'eetchen/eetchen.github.io'
+repository: 'aqsc/aqsc.github.io'
 teaser: # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs: false # true, false (default)
 words_per_minute: 160
@@ -90,7 +90,7 @@ author:
   pubmed: # 'https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow'
   googlescholar: # 'http://yourfullgooglescholarurl.com'
   researchgate: # example: "https://www.researchgate.net/profile/yourprofile"
-  uri: http://www.it.fudan.edu.cn/Data/View/2989
+  uri: http://www.github.com/aqsc
   bitbucket:
   codepen:
   dribbble:
@@ -209,14 +209,14 @@ defaults:
       layout: single
       author_profile: true
   # _teaching
-  - scope:
-      path: ''
-      type: teaching
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+  # - scope:
+  #     path: ''
+  #     type: teaching
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comments: true
   # _teams
   - scope:
       path: ''
