--- a/_config.yml
+++ b/_config.yml
@@ -79,13 +79,13 @@ analytics:
 
 # Site Author
 author:
-  name: 'Tao Chen 陈涛'
+  name: 'Sicheng Qian'
   avatar: 'profile.png'
-  bio: 'Professor (Tenured)'
+  bio: 'Senior Architect'
   location: 'Shanghai, China'
-  employer: 'Fudan University'
-  email: eetchen@fudan.edu.cn
-  tel: 021-31242503
+  employer: 'xxxxxxxxxx'
+  email: figurebar@hotmail.com
+  tel: 021-xxxxxxxxx
 
   pubmed: # 'https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow'
   googlescholar: # 'http://yourfullgooglescholarurl.com'
