--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale: 'zh-CN'
 title: 'VISUAL'
 title_separator: '-'
-name: &name 'Visual'
-description: &description 'Visual'
+name: &name 'Visual Processing and Understanding'
+description: &description 'Visual Processing and Understanding'
 url: 'https://aqsc.github.io' # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # url: 'http://127.0.0.1:4000'
 baseurl: '' # the subpath of your site, e.g. "/blog"
@@ -80,10 +80,10 @@ analytics:
 # Site Author
 author:
   name: 'Sicheng Qian'
-  avatar: 'profile.png'
+  avatar: 'bear_drink.webp'
   bio: 'Senior Architect'
   location: 'Shanghai, China'
-  employer: 'xxxxxxxxxx'
+  employer: 'Company'
   email: figurebar@hotmail.com
   tel: 021-xxxxxxxxx
 
