--- a/_config.yml
+++ b/_config.yml
@@ -209,14 +209,14 @@ defaults:
       layout: single
       author_profile: true
   # _teaching
-  # - scope:
-  #     path: ''
-  #     type: teaching
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     share: true
-  #     comments: true
+  - scope:
+      path: ''
+      type: projection
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
   # _teams
   - scope:
       path: ''
