--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,23 +9,23 @@ main:
   # - title: "Talks"
   #   url: /talks/
 
-  - title: 'Teaching'
-    url: /teaching/
+  # - title: 'Teaching'
+  #   url: /teaching/
 
-  - title: 'Teams'
-    url: /teams/
+  # - title: 'Teams'
+  #   url: /teams/
 
-  # - title: "Portfolio"
-  #   url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
 
-  # - title: "Blog Posts"
-  #   url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
 
   - title: 'CV'
     url: /cv/
 
+  - title: "Guide"
+    url: /markdown/
+    
   - title: 'Talent recruitment'
     url: /recruitment/
-
-  # - title: "Guide"
-  #   url: /markdown/
