--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,14 @@
 # Authors
 
-Name Name:
-  name: 'Tao Chen'
-  uri: 'https://faculty.fudan.edu.cn/chentao1/zh_CN/index/419981/list/index.htm'
-  email: 'eetchen@fudan.edu.cn'
-  bio: ''
-  avatar: 'profile.jpg'
-  # twitter: 'name'
-  # google_plus: 'Name'
+# Name Name:
+#   name: 'Sicheng Qian'
+#   uri: ''
+#   email: ''
+#   bio: ''
+#   avatar: 'profile.jpg'
+#   # twitter: 'name'
+#   # google_plus: 'Name'
+
 # Name2 Name2:
 #   name        : "Name2 Name2"
 #   email       : "name2@name2.com"
